@@ -1,3 +1,13 @@
+1999-09-29  Havoc Pennington  <hp@pobox.com>
+
+	* gconf/gconf-conf.h: Replaced with gconf-engine.h
+
+	* gconf/Makefile.am: use gconf-engine.h
+
+	* gconf/gconf.c, gconf/gconf.h, gconf/gconftool.c,
+	gconf-editor/app.c, wrappers/guile/scm-gconf.c: 
+	Use GConfEngine name instead of GConf
+
 1999-09-29  Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>
 
 	* configure.in: added pt_BR to ALL_LINGUAS
